test/should_pass/basic_014.grg
actions basic_014;

rule r {
	pattern {
		x : Node;
	}
	replace {
		x --> y : Node;
	}
}

