test/should_fail/inh_attrib_003.grg
actions inh_attrib_003 using inh_attrib_model_003;

rule r {
	pattern {
	}
	replace {
	}
}

